<resources>
    <string name="app_name">TestYandexApp</string>
    <string name="popular_requests">Popular requests</string>
    <string name="searched_for_this">You\'ve searched for this</string>
    <string name="stocks">Stocks</string>
    <string name="favourite">Favourite</string>
    <string name="find_company">Find company or ticker</string>

    <string name="day_delta">$%1$.02f (%2$.02f%%)</string>
    <string name="price_format">$%1$.02f</string>
    <string name="price_format_long">$%1$.05f</string>
    <string name="network_error">Network error or wrong API response</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live">Live</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="half_year">Half Year</string>
    <string name="six_h_button">6H</string>
    <string name="logo">logo</string>

    <string name="source">Source: %1$s</string>
</resources>