<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_suggestions_header"
        tools:orientation="horizontal" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="0dp"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_recycler" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/line_chart"
        app:layout_constraintEnd_toEndOf="@id/line_chart"
        app:layout_constraintStart_toStartOf="@id/line_chart"
        app:layout_constraintTop_toTopOf="@id/line_chart" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_chart">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/live_button"
                    style="@style/DetailedInformationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/live" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/day_button"
                    style="@style/DetailedInformationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:checked="true"
                    android:text="@string/day" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/week_button"
                    style="@style/DetailedInformationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/week" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/month_button"
                    style="@style/DetailedInformationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/month" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/half_year__button"
                    style="@style/DetailedInformationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/half_year" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/year_button"
                    style="@style/DetailedInformationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/year" />


            </RadioGroup>
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

