<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/search_card"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:elevation="0dp"
                app:cardCornerRadius="24dp"
                app:strokeColor="@color/theme_black"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/back_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"

                        android:paddingStart="16dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="16dp"

                        android:src="@drawable/ic_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_search_24" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/search_input_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:lineHeight="24dp"
                        android:singleLine="true"
                        android:hint="@string/find_company"
                        android:textColor="@color/theme_black"
                        android:textSize="16sp"
                        android:background="@android:color/transparent"
                        android:inputType="textNoSuggestions"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/loading_pb"
                        app:layout_constraintStart_toEndOf="@id/back_iv"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/close_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"

                        android:paddingStart="12dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="16dp"
                        android:src="@drawable/ic_close"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="visible"/>

                    <ProgressBar
                        android:id="@+id/loading_pb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:paddingTop="12dp"
                        android:paddingEnd="4dp"
                        android:paddingBottom="10dp"
                        android:visibility="invisible"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.Group
        android:id="@+id/start_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="popular_requests,popular_requests_recycler,search_requests,search_requests_recycler" />

    <TextView
        android:id="@+id/popular_requests"
        style="@style/SuggestionsTextStyle.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_requests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popular_requests_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popular_requests"
        tools:itemCount="2"
        tools:listitem="@layout/item_suggestions_company" />

    <TextView
        android:id="@+id/search_requests"
        style="@style/SuggestionsTextStyle.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searched_for_this"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popular_requests_recycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_requests_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_requests"
        tools:itemCount="2"
        tools:listitem="@layout/item_suggestions_company" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="stocks_recycler,stocks_tv" />

    <TextView
        android:id="@+id/stocks_tv"
        style="@style/SuggestionsTextStyle.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stocks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_requests_recycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stocks_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stocks_tv"
        tools:listitem="@layout/item_suggestions_company" />

</androidx.constraintlayout.widget.ConstraintLayout>